# HusarionCore2Tools

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md
.github/: copilot-instructions.md
docs/: CORE2 _ Husarion.html
docs/CORE2 _ Husarion_files/: gtm.js.pobrane  js  js(1)  legacy.js.pobrane  main.8ec493b0.js.pobrane  runtime~main.d08b7e50.js.pobrane  styles.d161c39d.css
flasher-master/fixed-flasher-master/: CMakeLists.txt
flasher-master/fixed-flasher-master/include/: getopt.h  myFTDI.h  timeutil.h  xcpmaster.h  xcptransport.h
flasher-master/fixed-flasher-master/port/linux/: timeutil.cpp
flasher-master/fixed-flasher-master/port/windows/: ftdi.h
flasher-master/fixed-flasher-master/src/: HardFlasher.cpp  console.cpp  ihex.cpp  main.cpp  myFTDI.cpp  myFTDI_stub.cpp  xcpmaster.cpp
hFramework/: .gitignore  CMakeLists.txt  README.md  hFramework.cmake  hFrameworkPort.cmake
hFramework/docs/: comprehensive-api-guide.md
hFramework/examples/core2mini/: CMakeLists.txt
hFramework/include/: IMU.h
hFramework/ports/esp32/: options.cmake
hFramework/ports/stm32/: options.cmake
hFramework/ports/stm32/include/: Arduino.h  hSD.h
hFramework/ports/stm32/src/: Arduino.cpp  hSystem.cpp
hFramework/ports/stm32/src/hPeriph/: myGPIO_0_2_0_core2mini.h  mySPI.c
hFramework/ports/stm32/src/hUSB/usb/: usb_bsp.c  usb_conf.h  usbh_adk_core.c  usbh_adk_core.h  usbh_usr.c  usbh_usr.h
hFramework/project_arduino/: CMakeLists.txt
hFramework/project_arduino/arduino test1/: CMakeLists.txt
hFramework/project_arduino/arduino_String/: CMakeLists.txt
hFramework/project_template/: CMakeLists.txt
hFramework/py-connector/: CMakeLists.txt
hFramework/src/hSystem/: hEventBits.cpp
hFramework/src/rosbot/: IMU.cpp  ROSbot.cpp  arduino_mpu9250_clk.cpp  arduino_mpu9250_i2c.cpp  arduino_mpu9250_log.cpp  inv_mpu.cpp  inv_mpu_dmp_motion_driver.cpp
hFramework/tests/: CMakeLists.txt
hModules/: CMakeLists.txt  LICENSE.md  README.md
hModules/docs/: comprehensive-api-guide.md
hModules/include/: MatrixButtons.h  mpudmp.h
hModules/src/: MatrixButtons.cpp
hModules/tests/: CMakeLists.txt
hSensors/: CMakeLists.txt  LICENSE.md  README.md
hSensors/docs/: comprehensive-api-guide.md
hSensors/tests/: CMakeLists.txt
tools/install/: bootstrap-hframework.ps1  build-distribution-package.ps1  build-release-zip.ps1  install-bundle.ps1  install-core2-extension.ps1  install-from-github-release.ps1  install-inhouse.ps1  install-package.ps1
tools/vscode-husarion-core2/: .vscodeignore  LICENSE.md  README.md  build-vsix.ps1  extension.js  pack-local-extension.ps1  package.json
tools/vscode-husarion-core2/scripts/: install-deps.ps1  install-or-refresh-toolchain.ps1  update-from-github.ps1
